--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
     "modernizr": "~2.8.3",
     "coffee-script": "1.9.3",
     "he": "~0.5.0",
-    "innerText-polyfill": "git://github.com/duckinator/innerText-polyfill.git"
+    "innerText-polyfill": "git://github.com/duckinator/innerText-polyfill.git",
+    "jquery-cookie": "~1.4.1"
   },
   "devDependencies": {}
 }
