--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "bower": "^1.4.1",
     "coffee-script": "^1.9.3",
+    "cookie-parser": "^1.3.5",
     "debug": "^2.2.0",
     "express": "^4.13.1",
     "media-typer": "^0.3.0",
