use github favicon

--- a/app.json
+++ b/app.json
@@ -8,5 +8,5 @@
   ],
   "website": "http://tastebin.x-berg.de",
   "repository": "https://github.com/andreineculau/tastebin",
-  "logo": "http://tastebin.x-berg.de/favicon.png",
+  "logo": "https://raw.githubusercontent.com/andreineculau/tastebin/master/static/iconmonstr-cut-icon-256.png"
 }
